@@ -2,6 +2,8 @@ PHORONIX TEST SUITE CHANGE-LOG
 
 Phoronix Test Suite (Git)
 
+pts-core: Transition to new JSON-based data format for managing test install metadata while maintaining backwards compatibility with prior XML format
+pts-core: Begin tracking test run-times per-hash (all configured test options) for more detailed time tracking and in turn time estimates on subsequent runs
 pts-core: Increase compression factor when uploading benchmark results
 pts-core: Last minute fixes for PHP 8.x
 phodevi: Report if CPUFreq Boost enabled/disabled
